Add needle image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="text-icon"> 
             <div class="truck">
               <span class="logo">
-                <img src="images/logo.png" alt="">
+                <img src="images/logo.png" alt="" class="logo-img">
+                <img src="images/logo-needle.png" alt="" class="needle-img">
               </span>
               <span class="notify-text">
                 <span><img src="images/truck.png" alt="truck">Free Shipping</span>
@@ -410,7 +411,6 @@
             </div>
         </section> 
         <footer>
-        <div class=""> 
           <div class="cards-block">
             <img src="images/guarantee.png" alt="">
             <span>Need Help? Call Us On: <b>+91 9820416772</b></p>
@@ -505,7 +505,6 @@
                         <button> send</button>
                       </div>
                     </div>
-                  </div>
                   </div>
                   </div>
                 </div>
